<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_title">USB Serial Example</string>
    <string name="app_name">Serial Example</string>
    <string name="refreshing">Refreshing...</string>
    <string name="textBtnRTS">RTS - Request To Send</string>
    <string name="textBtnDTR">DTR - Data Terminal Ready</string>
    <string name="textBtnInitPort">OPEN Port</string>
    <string name="textBtnSendData">Send</string>
    <string name="textBtnClosePort">Close Port</string>

</resources>
